--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -22,16 +22,14 @@ a{
     position: absolute;
     width: 80px;
   }
-  .plates {
-    display: flex;
-    flex-wrap: wrap;
-    max-height: 160px;
-    width: 640px;
-  }
 
   .plate {
+    display: none;
     height: 80px;
     width: 80px;
+    @include breakpoint-down(medium){
+        display: block;
+    }
   }
   .burger {
     filter: url(#gooeyness);
